--- a/src/style.scss
+++ b/src/style.scss
@@ -8,53 +8,180 @@ $black: #000;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
-header {
+body {
+    width: 100vw;
+    overflow-x: hidden;
+}
+
+header {  
     width: 100%;
-    min-height: 50px;
+    background-color: #fff;
+    filter: drop-shadow(1px 2px 3px rgba(143, 143, 143, 0.2));    
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 1rem;
+    justify-content: center;
     position: fixed;
     top: 0;
-    left: 0;
-    z-index: 1000;
-    background-color: #fff;
-    filter: drop-shadow(1px 2px 3px rgba(143, 143, 143, 0.2));
-    img {
-        width: 8rem;
-        height: auto;
-        object-fit: contain;
+    right: 0;
+    z-index: 10000;
+    > div{
+        width: 100%;
+        max-width: 1280px;
+        min-height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 1rem;
+        flex-wrap: wrap;
+        img {
+            width: 8rem;
+            height: auto;
+            object-fit: contain;
+        }
+        #browser {
+            border-bottom: solid 2px #b5b5b5;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            margin-top: 1rem ;
+            input {
+                border: none;
+                width: 100%;
+                padding: 5px 5px 5px 0;
+                &::placeholder {
+                    color: #545454;
+                }
+                &:focus {
+                    border: none;
+                    outline: none;
+                }
+            }
+            svg {
+                font-size: 25px;
+            }
+        }
+        .container-cart {
+            display: flex;
+            align-items: center;
+            button {
+                border: none;
+                min-width: 30px;
+                height: 30px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                margin-right: 20px;
+                background-color: transparent;
+                &:focus,
+                &:active {outline: none;}
+                #products-length {
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 50%;
+                    background-color: $red;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    color: #fff;
+                    font-weight: 600;
+                }
+            }
+        }
+        @media screen and (min-width: 768px) {
+            height: 65px;
+            #browser {
+                width: 60%;
+                margin-top: 0;
+            }
+        }
     }
-    #browser {
-        border-bottom: solid 2px #b5b5b5;
+}
+
+.products-menu {
+    position: fixed;
+    width: 100%;
+    background-color: #fff;
+    min-height: 50px;
+    right: 0;
+    z-index: 999;
+    // padding: 20px;
+    border-radius: 0 0 0 10px;
+    color: #fff;
+    overflow: hidden;
+    #close-products {
+        position: absolute;
+        right: 10px;
+        top: 8px;
         display: flex;
         align-items: center;
         justify-content: center;
+        color: #fff;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+        &:focus,
+        &:active {outline: none;}
+    }
+    > span {
+        display: flex;
+        padding: 10px 20px;
+        background-color: #000;
+        color: #fff;
+        font-weight: 600;
+        z-index: 999;
+    }
+    .list-products {
+        padding: 10px 20px;
+        max-height: 300px;
+        overflow-y: auto;
+        color: #2e2e2e;
+        .product-rendered {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px 0;
+            border-bottom: solid 1px #f1f2f3;
+            height: 50px;
+            > div {
+                display: flex;
+                align-items: center;
+                .remove-item {
+                    color: $red;
+                    border: none;
+                    background-color: transparent;
+                    cursor: pointer;
+                    &:focus,
+                    &:active {outline: none;}
+                }
+            }
+            span {
+                margin: 0 10px;
+            }
+            img {
+                width: 40px;
+                object-fit: contain;
+            }
+        }
+    }
+    #subtotal {
+        display: flex;
+        justify-content: flex-end;
         width: 100%;
-        margin-top: 1rem ;
-        input {
-            border: none;
-            width: 100%;
-            padding: 5px 5px 5px 0;
-            &::placeholder {
-                color: #545454;
-            }
-            &:focus {
-                border: none;
-                outline: none;
-            }
-        }
-        svg {
-            font-size: 25px;
-        }
+        text-align: right;
+    }
+    @media screen and (min-width: 768px) {
+        max-width: 700px;
     }
 }
 
 .spacing {
     width: 100%;
     height: 100px;
+    @media screen and (min-width: 768px) {
+        height: 65px;
+    }
 }
 
 #banner {
@@ -66,95 +193,106 @@ header {
         }
     }
     .slick-dots {
-        margin-top: -30px;
+        margin-top: -70px;
     }
 }
 
 // carousel - products
-.slick-slider {
-    overflow: hidden;
+#carousel-products {
     background-color: #FCFBFC;
-    position: inherit!important;
-    width: 100vw;
-    .item {
+    padding-top: 70px;
+    h2 {
+        color: #2e2e2e;
         width: 90%;
-        display: flex;
-        flex-direction: column;
-        margin: 20px auto;
-        background-color: #fff;
-        padding: 10px;
-        flex: 1;
-        height: 100%;
-        position: relative;
-        .percentageDiscount {
-            position: absolute;
-            right: 20px;
-            top: 20px;
-            padding: 6px 16px;
-            border-radius: 8px;
-            color: #fff;
-            font-weight: 600;
-            background-color: $black;
-
+        max-width: 1250px; 
+        margin: 10px auto;
+    }
+    .slick-slider {
+        overflow: hidden;
+        position: inherit!important;
+        width: 100%;
+        .slick-list {
+            max-width: 1280px;
+            margin: 15px auto;
         }
-        .container-img {
-            background-color: #FCFBFC;
-            width: 100%;
-            height: 82%;
+        .item {
+            width: 90%;
             display: flex;
+            flex-direction: column;
+            margin: 0 auto 20px auto;
+            background-color: #fff;
+            padding: 10px;
             flex: 1;
-            img {
+            height: 100%;
+            position: relative;
+            .percentageDiscount {
+                position: absolute;
+                right: 20px;
+                top: 20px;
+                padding: 6px 16px;
+                border-radius: 8px;
+                color: #fff;
+                font-weight: 600;
+                background-color: $black;
+            }
+            .container-img {
+                background-color: #FCFBFC;
                 width: 100%;
-            }
-        }
-        .name {
-            font-size: 14px;
-            height: 40px;
-            text-overflow:ellipsis;
-            overflow:hidden;
-            display: -webkit-box !important;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            white-space: normal;
-        }
-
-        .price-container {
-            font-weight: 600;
-            font-size: 16px;
-            margin-bottom: 5px;
-            display: flex; 
-            align-items: center;
-            flex-wrap: wrap;
-            .price {
+                height: 82%;
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
-                margin-right: 10px;
-                text-align: center;
-                height: 40px;
-                .list-price {
+                flex: 1;
+                img {
                     width: 100%;
+                }
+            }
+            .name {
+                font-size: 14px;
+                height: 40px;
+                text-overflow:ellipsis;
+                overflow:hidden;
+                display: -webkit-box !important;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                white-space: normal;
+            }
+    
+            .price-container {
+                font-weight: 600;
+                font-size: 16px;
+                margin-bottom: 5px;
+                display: flex; 
+                align-items: center;
+                flex-wrap: wrap;
+                .price {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    margin-right: 10px;
+                    text-align: center;
+                    height: 40px;
+                    .list-price {
+                        width: 100%;
+                        font-size: 12px;
+                        text-decoration: line-through;
+                        color: rgb(109, 109, 109);
+                    }
+                }
+                .installments {
+                    display: flex;
+                    align-items: center;        
                     font-size: 12px;
-                    text-decoration: line-through;
-                    color: rgb(109, 109, 109);
+                    height: 30px;
+                    color: rgb(58, 58, 58);
+                    min-width: 90px;
+                    svg {
+                        margin-right: 5px;
+                        font-size: 18px;
+                    }
                 }
             }
-            .installments {
-                display: flex;
-                align-items: center;        
-                font-size: 12px;
-                height: 30px;
-                color: rgb(58, 58, 58);
-                min-width: 90px;
-                svg {
-                    margin-right: 5px;
-                    font-size: 18px;
-                }
+            .svg {
+                background-color: $red;
             }
-        }
-
-        .svg {
-            background-color: $red;
         }
     }
 }
@@ -191,7 +329,6 @@ header {
         border-color: $black;
         color: #fff;
     }
-
 }
 
 #newsletter {
@@ -235,50 +372,80 @@ header {
         }
         .button {
             width: 200px!important;
+            height: 50px;
         }
     }
 }
 
 .errorInput {
-    margin: -5px 0 20px 0;
     color: $red;
+    margin-top: 20px;
+    width: 100%;
+    max-width: 600px;
+    @media screen and (min-width: 992px) {
+        margin-top: -5px;    
+    }
 }
 
 footer {
     background-color: $black;
     padding: 20px;
     color: #fff;
-    .ubication {
-        display: flex;
-        flex-direction: column;
-        p {
-            margin-top: 20px;
-            font-size: 16px;
-            color: rgb(224, 224, 224);
-        }
-    }
-    .contact {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 40px 0;
-        button {
+    > div {
+        > div {
             width: 100%;
-            max-width: 280px;
-            justify-content: space-evenly;
-            font-size: 12px;
-            font-weight: 500;
-            border-color: #000;
-            padding: 25px 0;
-            .container-icon {
-                position: absolute;
-                left: 0;
+        }
+        .ubication {
+            display: flex;
+            flex-direction: column;
+            p {
+                margin-top: 20px;
+                font-size: 16px;
+                color: rgb(224, 224, 224);
             }
-            &:first-child {
-                margin-bottom: 30px;
+            @media screen and (min-width: 768px) {
+                width: auto;
             }
-            &:hover {
-                border-color: #fff;
+        }
+        .contact {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 40px 0;
+            button {
+                width: 100%;
+                max-width: 280px;
+                justify-content: space-evenly;
+                font-size: 12px;
+                font-weight: 500;
+                border-color: #000;
+                padding: 25px 0;
+                .container-icon {
+                    position: absolute;
+                    left: 0;
+                }
+                &:first-child {
+                    margin-bottom: 30px;
+                }
+                &:hover {
+                    border-color: #fff;
+                }
+            }
+        }
+        @media screen and (min-width: 992px) {
+            display: flex;
+            justify-content: space-between;
+            max-width: 1280px;
+            margin: 0 auto;
+            > div {
+                width: auto;
+            }
+            .end {
+                display: flex;
+                flex-direction: column;
+            }
+            .contact .button {
+                width: 300px;
             }
         }
     }
@@ -318,31 +485,14 @@ footer {
     justify-content: center;
 }
 
-.products-menu {
-    position: fixed;
-    width: 100%;
-    background-color: #000;
-    min-height: 50px;
-    // top: 90px;
-    left: 0;
-    z-index: 999;
-    padding: 20px;
-    color: #fff;
-    .list-products {
-        max-height: 300px;
-        overflow-y: auto;
-        .product-rendered {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 20px 0;
-            span {
-                margin: 0 10px;
-            }
-            img {
-                width: 40px;
-                object-fit: contain;
-            }
-        }
+h2 {
+    position: relative;
+    .line {
+        position: absolute;
+        bottom: -10px;
+        left: 0;
+        width: 70px;
+        height: 4px;
+        background-color: #ccc;
     }
 }
